# xiphos

./: .bzrignore  .bzrrules  .ci-build.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  ChangeLog  GnomeSword.prj  Gnomesword.prj  INSTALL  INSTALL-cmake.md  INSTALL.md  Makefile  Makefile.am  Makefile.in  NEWS  README  README.BibleSync  README.md  RELEASE-NOTES  TODO  TRANSLATION-HOWTO  WAF-TODO  Xiphos.prj  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  debian.md  distcheck.sh  gnomesword-1.0.desktop  (+27 more)
desktop/: CMakeLists.txt  xiphos-nav.1.in  xiphos.1.in  xiphos.appdata.xml  xiphos.desktop.in
doc/: CMakeLists.txt  Translating-Xiphos.md  Writing Xiphos Manual.md  c.txt  function.txt  getting_started.txt  h.txt  head.txt  i18n reminder for developers.md  targets for developpers.md
doc/help/: Guidelines  Makefile.am  intro.html  search.html  template.html
gnomesword/: AUTHORS  CHANGELOG  ChangeLog  DICTClient.cpp  DICTClient.h  GnomeSword.cpp  GnomeSword.h  GnomeSword.prj  Gnomesword.prj  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  RELEASE-NOTES  TODO  TRANSLATION-HOWTO  aclocal.m4  callback.c  callback.cpp  callback.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  dialogs.cpp  dialogs.h  display.cpp  display.h  filestuff.cpp  filestuff.h  gnomesword.desktop  gnomesword.desktop.in.in  gnomesword.glade  gnomesword.kdevprj  gnomesword.prj  gs_abouts.c  (+49 more)
gnomesword/.deps/: GnomeSword.P  callback.P  display.P  filestuff.P  interface.P  main.P  menustuff.P  support.P
gnomesword/debian/: README.Debian  changelog  control  control.in  copyright  emacsen-startup.ex  files  gnomesword.1  menu  preinst.ex  rules  watch  watch.ex
gnomesword/e-util/: Makefile.am  Makefile.in  e-canvas-utils.h  e-canvas-vbox.c  e-cursors.c  e-gui-utils.h  e-html-utils.c  e-iterator.c  e-iterator.h  e-list-iterator.c  e-popup-menu.c  e-printable.h  e-setup.c  e-setup.h  e-sexp.c  e-util.h  e-xml-utils.c
gnomesword/gnomesword/: DICTClient.h  GnomeSword.cpp  GnomeSword.h  Makefile  Makefile.am  Makefile.in  callback.c  callback.cpp  callback.h  dialogs.cpp  display.cpp  display.h  filestuff.cpp  filestuff.h  gs_display.cpp  gs_display.h  gs_file.c  gs_file.h  gs_gnomesword.c  gs_gnomesword.h  gs_history.c  gs_html.c  gs_html.h  gs_listeditor.c  gs_listeditor.h  gs_menu.c  gs_menu.h  gs_popup_cb.c  gs_popup_cb.h  gs_rwphtml.cpp  gs_rwphtml.h  gs_search.cpp  gs_studypad.c  gs_studypad.h  gs_sword.cpp  gs_sword.h  gs_thmlplain.cpp  gs_thmlplain.h  gs_viewcomm.c  gs_viewdict.c  (+28 more)
gnomesword/help/: Changelog  Makefile.am  index.html  intro.html
gnomesword/m4/: Makefile.am  gecko.m4  gnomesword-mozilla.m4  intltool.m4
gnomesword/macros/: ChangeLog  Makefile  Makefile.am  Makefile.in
gnomesword/pixmaps/: footnote3.xpm  gnome-fontsel.xpm  gs2.xpm  morphs.xpm  search1.xpm  strongs.xpm  strongs2.xpm  sword.xpm  sword3.xpm  yes.xpm
gnomesword/po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  bg.po  cat-id-tbl.c  cs.po  de.po  en_GB.po  es.po  es_ES.po  fa.po  fi.po  fr.po  fr_FR.po  gnomesword.pot  he_IL.po  nb_NO.po  nl.po  pt.po  pt_PT.po  ru.po  ru_RU.po  sk.po  sv_SE.gmo  sv_SE.mo  uk.po
gnomesword/src/: Makefile.am  Makefile.in  callback.c  callback.h  display.cpp  display.h  e-splash.c  e-splash.h  font_dialog.c  font_dialog.h  gbfhtmlhref.cpp  gbfhtmlhref.h  gs_abouts.c  gs_abouts.h  gs_bookmarks.c  gs_bookmarks.h  gs_commentary.c  gs_commentary.h  gs_detach_int.c  gs_detach_int.h  gs_detach_sb.c  gs_detach_sb.h  gs_dictlex.c  gs_display.cpp  gs_display.h  gs_dock_dlg.c  gs_editor.c  gs_editor.h  gs_editor_replace.c  gs_editor_search.h  gs_editor_toolbar.c  gs_editor_toolbar.h  gs_file.c  gs_file.h  gs_find_dlg.c  gs_find_dlg.h  gs_gbs.c  gs_gbs.h  gs_gnomesword.c  gs_gnomesword.h  (+96 more)
gnomesword/ui/: Makefile.am  bookmarks.glade  editor.xml  editor_note.xml  editor_studypad.xml  export-dialog.glade  languages  prefs.glade  (+4 more)
gnomesword1/: .tm_project.cache  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  acconfig.h  aclocal.m4  config.h.in  configure.in  configure.in.gnome2  gnomesword-1.0.desktop.in  gnomesword.doap.rdf  gnomesword.prj  gnomesword.pws  gnomesword.spec.in  gnomesword1.desktop  gnomesword2.desktop.in  gnomesword2.spec.in
gnomeswordLE/: ChangeLog  GnomeswordLE.desktop  GnomeswordLE.desktop.in  GnomeswordLE.prj  INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure.in  tags.cache
gtksword2/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.in  gtksword.prj
help/: CMakeLists.txt  Guidelines  HELP_LINGUAS  Makefile.am  gnomesword.chm  gnomesword_fr.chm  index.html  intro.html  wscript  wscript_build  xiphos-manual.omf.in  xiphos.chm  xiphos.pot  xiphos_fr.chm
mhelp/: CMakeLists.txt  HELP_LINGUAS  ms_langcodes_file  xiphos.pot
pixmaps/: CMakeLists.txt  Makefile.am  exit2.xpm  f.xpm  l.xpm  p.xpm  r.xpm
ui/: CMakeLists.txt  Makefile.am  bookmarks.glade  bookmarks.gtkbuilder  bookmarks_old.gtkbuilder  editor.xml  editor_link_dialog.gtkbuilder  editor_link_dialog.xml  editor_link_dialog_old.gtkbuilder  editor_note.xml  editor_note_WIN32.xml  editor_studypad.xml  editor_studypad_WIN32.xml  export-dialog.glade  export-dialog.gtkbuilder  export-dialog_old.gtkbuilder  folder.glade  folder.gtkbuilder  gtk2_webedit.ui  gtk_webedit.ui  languages  languages.cygwin  main-menus-new.ui  markverse.glade  markverse.gtkbuilder  markverse_old.gtkbuilder  module-manager.glade  module-manager.gtkbuilder  module-manager_old.gtkbuilder  navbar_versekey.glade  navbar_versekey.gtkbuilder  navbar_versekey_old.gtkbuilder  popups.glade  prefs.glade  prefs.gtkbuilder  prefs.ui  prefs_old.gtkbuilder  search-dialog.glade  search-dialog.gtkbuilder  selector-prefs.glade  (+12 more)
win32/: CMakeLists.txt  Dockerfile  WindowsBuildNotes.txt  build_sword.sh  building-on-fedora.txt  exetype.pl  files.txt  fix-config-slash  makeDistro.sh  makeDistro64.sh  makeDistroGTK3.sh  makeTranslations.sh  package.py  xc-xiphos-win.sh
(+2513 files in other folders)
